[gd_scene load_steps=5 format=3 uid="uid://dp8px7lu0vla"]

[ext_resource type="Script" path="res://Upgrade.gd" id="1_rfxfx"]
[ext_resource type="Script" path="res://FadeUI.gd" id="2_256ro"]
[ext_resource type="Texture2D" uid="uid://bnm5suspic7w2" path="res://art/ArrowLeft.png" id="3_fbrra"]
[ext_resource type="Texture2D" uid="uid://p7f2q6a8gwpy" path="res://art/ArrowRight.png" id="4_35abl"]

[node name="Upgrade" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_rfxfx")

[node name="UpgradeFadeUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_256ro")

[node name="MarginContainer" type="MarginContainer" parent="UpgradeFadeUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeFadeUI/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="UpgradeFadeUI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
mouse_filter = 0
text = "Power"

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeFadeUI/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DownButton" type="Button" parent="UpgradeFadeUI/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_fbrra")

[node name="NumberLabel" type="Label" parent="UpgradeFadeUI/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "1 Ton"
horizontal_alignment = 1

[node name="UpButton" type="Button" parent="UpgradeFadeUI/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("4_35abl")

[node name="NumberDescLabel" type="Label" parent="UpgradeFadeUI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
mouse_filter = 0
text = "Power"

[node name="UpgradeCost" type="Button" parent="UpgradeFadeUI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Upgrade: $4b"
